--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
     <form action="action_to_perform_after_submission" method = "POST">
-        <p>Search: <input type = "text" name = "Field1_name" /> <input type = "submit" value = "submit" /></p>
+        <p>Search: <input type = "text" name = "Field1_name" /> <a button type="button" href="{{ url_for('search') }}">Search</a></p>
     </form>
 </html>
